--- a/src/core/index.css
+++ b/src/core/index.css
@@ -126,6 +126,7 @@ see: https://github.com/tailwindlabs/tailwindcss-intellisense/issues/1340
   * {
     @apply border-border outline-ring/50;
   }
+
   body {
     @apply bg-background text-foreground;
   }
@@ -133,4 +134,23 @@ see: https://github.com/tailwindlabs/tailwindcss-intellisense/issues/1340
 
 body {
   font-family: var(--font-jetbrains-mono);
+}
+
+input[type="color"]::-webkit-color-swatch,
+input[type="color"]::-moz-color-swatch {
+  border-radius: 4px;
+  /* inner box roundness */
+  border: 1px solid #d1d5db;
+  /* Tailwind gray-300 */
+}
+
+input[type="color"]::-webkit-color-swatch-wrapper,
+input[type="color"]::-moz-focus-inner {
+  padding: 4px;
+  /* spacing inside the input */
+  border-radius: 4px;
+}
+
+input[type="file"]::file-selector-button {
+  @apply py-1 rounded-md cursor-pointer;
 }
