--- a/src/core/index.css
+++ b/src/core/index.css
@@ -154,3 +154,16 @@ input[type="color"]::-moz-focus-inner {
 input[type="file"]::file-selector-button {
   @apply py-1 rounded-md cursor-pointer;
 }
+
+/* Hide scrollbar for Chrome, Safari and Edge */
+.scrollbar-hidden::-webkit-scrollbar {
+  display: none;
+}
+
+/* Hide scrollbar for Firefox */
+.scrollbar-hidden {
+  scrollbar-width: none;
+  /* Firefox */
+  -ms-overflow-style: none;
+  /* IE 10+ */
+}
