chore(animate-code): improve layout toolbar & editor for web and mobile ( safari )

--- a/src/core/index.css
+++ b/src/core/index.css
@@ -132,6 +132,12 @@ see: https://github.com/tailwindlabs/tailwindcss-intellisense/issues/1340
   }
 }
 
+html,
+body {
+  overscroll-behavior: none; /* prevents bounce scrolling */
+  -webkit-overflow-scrolling: auto; /* disables iOS rubber-band */
+}
+
 body {
   font-family: var(--font-jetbrains-mono);
 }
