feat: porting to desktop app using tauri

--- a/src/core/index.css
+++ b/src/core/index.css
@@ -136,6 +136,7 @@ html,
 body {
   overscroll-behavior: none; /* prevents bounce scrolling */
   -webkit-overflow-scrolling: auto; /* disables iOS rubber-band */
+  overflow: hidden;
 }
 
 body {
