--- a/src/core/index.css
+++ b/src/core/index.css
@@ -182,7 +182,9 @@ input[type="file"]::file-selector-button {
 }
 
 .ͼ1 .cm-lineNumbers > .cm-gutterElement {
-  width: 30px;
+  min-width: 30px;
+  padding-left: 12px;
+  padding-right: 16px;
   text-align: center;
 }
 
